fix(css): improves jump button placement

--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -74,6 +74,11 @@ iframe
 	position: relative
 	margin: 0
 
+// wrap before jump
+.footnotes p > *::after
+	content: ""
+	display: block
+
 // spacing
 .reversefootnote
 	position: absolute
